syntax = "proto3";
package com.wanfangdata.grpc;

option java_multiple_files = true;
option java_package = "com.wanfangdata.grpc";

message SearchRequest{
    Searcher searcher=1;
}
message CatagoryRequest {
    string bookId = 1;//书籍ID
}
message UsersRequest {
}
message Searcher{
    string query = 1;//查询关键词 （没有则传空值，）
    repeated string fq = 2;//过滤查询
    int32 pageNo = 3;//页码
    int32 pageSize = 4;//每页数量
    string core = 5;//查询库
    repeated string highLight = 6;//需要高亮字段
    repeated string facets = 7;//聚类字段 ([])
    repeated string facetPivot = 8;//多维聚类（[Province,City]）
    repeated string returnFeild = 9;//指定返回字段
    repeated Sort sorts = 10;//排序（[{feild: "Date"}]）
    string searchType=11;//特殊检索类型
}
message Sort{
    string feild = 1;
    string order = 2;
}
